Add class Dependency.State